RESOLVED FIXED143078
OSR availability analysis would be more scalable (and correct) if it did more liveness pruning
https://bugs.webkit.org/show_bug.cgi?id=143078
Summary OSR availability analysis would be more scalable (and correct) if it did more...
Filip Pizlo
Reported 2015-03-25 21:10:58 PDT
...
Attachments
the patch (7.17 KB, patch)
2015-05-11 22:20 PDT, Filip Pizlo
kling: review+
Test failing w/o eager compilation (306 bytes, application/x-javascript)
2015-05-12 09:55 PDT, Basile Clement
no flags
Filip Pizlo
Comment 1 2015-05-11 21:58:40 PDT
*** Bug 144883 has been marked as a duplicate of this bug. ***
Filip Pizlo
Comment 2 2015-05-11 22:20:05 PDT
Created attachment 252936 [details] the patch
WebKit Commit Bot
Comment 3 2015-05-11 22:21:37 PDT
Attachment 252936 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGAvailabilityMap.cpp:71: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Basile Clement
Comment 4 2015-05-12 09:55:03 PDT
Created attachment 252968 [details] Test failing w/o eager compilation This is a modified version of the test case in fpizlo's patch that fails even without eager compilation enabled.
Filip Pizlo
Comment 5 2015-05-12 10:56:50 PDT
(In reply to comment #4) > Created attachment 252968 [details] > Test failing w/o eager compilation > > This is a modified version of the test case in fpizlo's patch that fails > even without eager compilation enabled. Thanks! I added this test.
Filip Pizlo
Comment 6 2015-05-12 11:03:26 PDT
Note You need to log in before you can comment on or make changes to this bug.